--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "export": "next export"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/lab": "^7.0.0-beta.11",
+    "@mui/material": "^7.0.2",
     "chart.js": "^4.4.9",
     "next": "14.1.1",
     "react": "^18",
